--- a/example/storage/config/app_debug.yaml
+++ b/example/storage/config/app_debug.yaml
@@ -11,6 +11,8 @@ app:
   use-http-code: false
   time-zone: Asia/Shanghai
   communication-timeout: 1µs
+gateway:
+  address: http://localhost
 database:
   host: localhost
   port: "5432"
