--- a/file/app.yaml.example
+++ b/file/app.yaml.example
@@ -8,33 +8,39 @@ app:
   # [Optional] Encrypted salt, leave it blank to generate automatically
   # [可选]加密盐，留空则自动生成
   key:
-  # [Required] Whether to enable the verification code function(true/false), The default is true
-  # [必填] 是否开启验证码功能(true/false)，默认为true
-  captcha: false
-  # [Required] Whether to enable the registration function (true/false), The default is false
-  # [必填] 是否开启注册功能(true/false)，默认为false
-  register: false
   # [Required] Whether to enable the database function, if you have installed postgresql, please fill in true, otherwise fill in false, the default is false
   # [必填] 是否开启数据库功能，如果您安装了postgresql等，请填写true，否则填写false，默认为false
-  database: false
+  enable-database: false
   # [Required] Whether to enable the cache function, if you have installed redis, please fill in true, otherwise fill in false, The default is false
   # [必填] 是否开启缓存功能，如果你安装了redis等，请填写true，否则填写false，默认为false
-  cache: false
+  enable-cache: false
   # [Required] Whether to enable the service discovery function, if you have installed consul, please fill in true, otherwise fill in false, The default is false
   # [必填] 是否开启服务发现功能，如果你安装了consul等，请填写true，否则填写false，默认为false
-  service-discovery: false
+  enable-service-discovery: false
   # token expiration time(second), The default is 86400
   # token过期时间(秒)，默认为86400
   token-expiration-time: 86400
   # [Required] Whether to use the http status code as the code field in the api (true/false), the default is false
   # [必填] 是否使用http状态码作为api中的code字段(true/false)，默认为false
   use-http-code: false
-  # [Required] The time zone the application belongs to, the default is Asia/Shanghai
-  # [必填] 应用所属时区，默认为Asia/Shanghai
-  time-zone: Asia/Shanghai
   # [Required] The timeout period for communicating with other microservices, in milliseconds, the default is 1000
   # [必填] 与其他微服务通讯的超时时间，单位毫秒，默认为1000
   communication-timeout: 1000
+
+log:
+  # [Required] The lowest level of logging (panic/fatal/error/warning/info/debug/trace), the default is info
+  # [必填] 记录日志的最低等级(panic/fatal/error/warning/info/debug/trace)，默认为info
+  level: info
+  # [Required] The following is the output format of different log levels (1/2/3), 1 is only output in the log file, 2 is only output in the console, 3 is both output in the console and output in the log file, default Is 3
+  # [必填] 下方为不同日志等级输出格式(1/2/3)，1为仅在日志文件输出，2为仅在控制台输出，3为既在控制台输出也在日志文件输出，默认为3
+  panic: 3
+  fatal: 3
+  error: 3
+  warning: 3
+  info: 1
+  debug: 1
+  trace: 1
+
 # [If app.database is enabled, this field is required]
 # [若启用app.database，则该字段必填]
 database:
@@ -56,6 +62,10 @@ database:
   # [Required] Database table prefix (eg: prefix_)
   # [必填] 数据库表前缀(如：prefix_)
   prefix: prefix_
+  # [Required] The time zone the application belongs to, the default is Asia/Shanghai
+  # [必填] 应用所属时区，默认为Asia/Shanghai
+  time-zone: Asia/Shanghai
+
 # [If app.service-discovery is enabled, this field is required]
 # [若启用app.service-discovery，则该字段必填]
 service-discovery:
@@ -83,9 +93,9 @@ service-discovery:
       # [Required] HTTP Service tag (eg: ["primary"]
       # [必填] HTTP服务标签(如：["primary"])
       tag: []
-    # [Required] Service name prefix, used to distinguish different items (eg: "em/")
-    # [必填] 服务名称前缀，用于区分不同项目(如："em/")
-    prefix: "em/"
+    # [Required] Service name prefix, used to distinguish different items (eg: "em-")
+    # [必填] 服务名称前缀，用于区分不同项目(如："em-")
+    prefix: "em-"
     # [Required] Local IP address (eg: 192.168.1.100)
     # [必填] 本机IP地址(如：192.168.1.100)
     address: 192.168.1.100
@@ -95,6 +105,7 @@ service-discovery:
     # [Required] Node health check path (eg: /health)
     # [必填] 节点健康检查路径(如：/health)
     check-url: "/health"
+
 # [If app.cache is enabled, this field is required]
 # [若启用app.cache，则该字段必填]
 cache:
@@ -107,29 +118,16 @@ cache:
   # [Required] Cache server DB (such as: 1)
   # [必填] 缓存服务器DB(如：1)
   db: 1
+
 # [If app.captcha is enabled, this field is required]
 # [若启用app.captcha，则该字段必填]
 captcha:
+  # [Required] Captcha Server Address (eg: www.google.com / www.recaptcha.net)
+  # [必填] 验证码服务器地址
+  host: "www.google.com"
   # [Required] Captcha secret
   # [必填] 验证码密钥
   secret: "captcha-key"
-log:
-  # [Required] The lowest level of logging (panic/fatal/error/warning/info/debug/trace), the default is info
-  # [必填] 记录日志的最低等级(panic/fatal/error/warning/info/debug/trace)，默认为info
-  level: info
-  # [Required] The following is the output format of different log levels (1/2/3), 1 is only output in the log file, 2 is only output in the console, 3 is both output in the console and output in the log file, default Is 3
-  # [必填] 下方为不同日志等级输出格式(1/2/3)，1为仅在日志文件输出，2为仅在控制台输出，3为既在控制台输出也在日志文件输出，默认为3
-  panic: 3
-  fatal: 3
-  error: 3
-  warning: 3
-  info: 1
-  debug: 1
-  trace: 1
-field:
-  pagination:
-    # [Required] The following is the name of the custom paging field returned by the API, which can be customized to adapt to different front-end frameworks (eg: pageNo)
-    # [必填] 以下为API返回的自定义分页字段名，可自定义，以适配不同的前端框架(如：pageNo)
-    number: page_number
-    size: page_size
-    count: page_count
+  # [Required] Request timeout (eg: 10s)
+  # [必填] 请求超时时间
+  timeout: 10s
