--- a/file/en.toml
+++ b/file/en.toml
@@ -30,6 +30,7 @@ SUCCESS_Edit = "Edit successfully!"
 SUCCESS_Update = "Update successfully!"
 SUCCESS_Get = "Get success!"
 SUCCESS_Operation = "Successful operation!"
+SUCCESS_Validate = "validate successfully!"
 SUCCESS_Clear = "Cleared successfully!"
 SUCCESS_Delete = "Delete successfully!"
 SUCCESS_Upload = "Uploaded successfully!"
