--- a/file/zh.toml
+++ b/file/zh.toml
@@ -30,6 +30,7 @@ SUCCESS_Edit = "编辑成功！"
 SUCCESS_Update = "更新成功！"
 SUCCESS_Get = "获取成功！"
 SUCCESS_Operation = "操作成功！"
+SUCCESS_Validate = "验证成功！"
 SUCCESS_Clear = "清除成功！"
 SUCCESS_Delete = "删除成功！"
 SUCCESS_Upload = "上传成功！"
